edited styling for fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,13 @@
   --white: #fff;
   --black: #000;
 }
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  overflow-x: hidden;
+}
 /* Body */
 body {
   color: var(--text-color);
@@ -515,5 +522,8 @@ footer a:hover {
     font-size: 12px;
   }
   /* Buttons */
-  .btn.subscribe;
+  .btn.subscribe {
+    font-size: 9px;
+    padding: 5px 20px;
+  }
 }
